# spio

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  USAGE.md  index.html  pyproject.toml
.github/workflows/: ci.yml
examples/: discord_bot.py  main.py  telegram_bot.py
extensions/agents/: __init__.py  agents_core.py
extensions/boa_sdks/: __init__.py  boa_core.py
extensions/boot/: __init__.py  boot_core.py
extensions/brahims_laws/: __init__.py  agents_sdk.py  boa_wavelength_agent.py  brahim_geometry.py  brahim_numbers_calculator.py  brahims_laws_core.py  cli.py  openai_agent.py
extensions/bridges/: __init__.py  bridges_core.py
extensions/budget/: __init__.py  budget_core.py
extensions/cognitive/: __init__.py  cognitive_core.py
extensions/core/: __init__.py  core_modules.py
extensions/dashboard/: __init__.py  dashboard_core.py
extensions/drivers/: __init__.py  drivers_core.py
extensions/filesystem/: __init__.py  filesystem_core.py
extensions/gateway/: __init__.py  gateway_core.py
extensions/gpia_wormhole/: __init__.py  wormhole_core.py
extensions/iias/: __init__.py  iias_core.py  iias_handlers.py
extensions/kernel/: __init__.py  kernel_core.py
extensions/memory/: __init__.py  memory_core.py
extensions/modes/: __init__.py  modes_core.py
extensions/networking/: __init__.py  networking_core.py
extensions/physics/: __init__.py  physics_core.py
extensions/psi/: __init__.py  psi_core.py  psi_firefox.py  psi_onion.py
extensions/reflexes/: __init__.py  reflexes.py
extensions/research/: __init__.py  research_core.py
extensions/safety/: __init__.py  safety_core.py
extensions/scripts/: __init__.py  scripts_core.py
extensions/shell/: __init__.py  shell_core.py
extensions/skills/: __init__.py  skills_core.py
extensions/users/: __init__.py  users_core.py
extensions/wormhole/: __init__.py  wormhole_core.py
infrastructure/: Dockerfile  docker-compose.yml
infrastructure/k8s/: deployment.yaml
src/asios/: __init__.py  dag_planner.py  government.py  governor.py  pass_protocol.py  (+1 more)
tests/: __init__.py  test_calculator.py  test_runtime_integration.py  test_security.py
(+83 files in other folders)
