[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-pio"
version = "1.618.0"
description = "Sovereign PIO - Personal Intelligent Operator, Autonomous Edition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sovereign PIO Team"}
]
keywords = [
    "ai", "agent", "autonomous", "pio", "gpia", "asios", "moltbot",
    "multi-channel", "messaging", "intelligence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
gpu = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
npu = [
    "openvino>=2024.0.0",
]
full = [
    "sovereign-pio[dev,server,gpu,npu]",
]

[project.scripts]
spio = "sovereign_pio.cli:main"
sovereign-pio = "sovereign_pio.cli:main"

[project.urls]
Homepage = "https://github.com/Cloudhabil/spio"
Documentation = "https://github.com/Cloudhabil/spio/tree/main/docs"
Repository = "https://github.com/Cloudhabil/spio"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
